feat: 支持了不同群聊的切换
